crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__preview__F811_F811_15.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F811_15.py:4:5: F811 Redefinition of unused `fu` from line 1
  |
4 | def fu():
  |     ^^ F811
5 |     pass
  |
  = help: Remove definition: `fu`


