crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__preview__F811_F811_16.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F811_16.py:8:13: F811 Redefinition of unused `fu` from line 3
  |
6 | def bar():
7 |     def baz():
8 |         def fu():
  |             ^^ F811
9 |             pass
  |
  = help: Remove definition: `fu`


