crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__preview__F811_F811_36.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F811 [*] Redefinition of unused `BrokerUsecase` from line 2
 --> F811_36.py:7:45
  |
1 | from typing import TYPE_CHECKING
2 | from faststream._internal.broker import BrokerUsecase
  |                                         ------------- previous definition of `BrokerUsecase` here
3 |
4 | if TYPE_CHECKING:
5 |     # See: https://github.com/astral-sh/ruff/issues/22554
6 |     # should detect -------------------------vvvvvvvvvvvvv
7 |     from faststream._internal.broker import BrokerUsecase
  |                                             ^^^^^^^^^^^^^ `BrokerUsecase` redefined here
8 |     from faststream.specification.schema import Contact, License
  |
help: Remove definition: `BrokerUsecase`
  |
7 -     from faststream._internal.broker import BrokerUsecase
  |
