crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__preview__F811_F811_4.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F811_4.py:1:12: F811 Redefinition of unused `fu` from line 1
  |
1 | import fu; fu, bar = 3
  |            ^^ F811
  |
  = help: Remove definition: `fu`


