crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__preview__F841_F841_4.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F841_4.py:12:5: F841 [*] Local variable `a` is assigned to but never used
   |
11 | def bar():
12 |     a = foo()
   |     ^ F841
13 |     b, c = foo()
   |
   = help: Remove assignment to unused variable `a`

ℹ Suggested fix
9  9  | 
10 10 | 
11 11 | def bar():
12    |-    a = foo()
   12 |+    foo()
13 13 |     b, c = foo()
14 14 | 
15 15 | 

F841_4.py:13:5: F841 Local variable `b` is assigned to but never used
   |
11 | def bar():
12 |     a = foo()
13 |     b, c = foo()
   |     ^ F841
   |
   = help: Remove assignment to unused variable `b`

F841_4.py:13:8: F841 Local variable `c` is assigned to but never used
   |
11 | def bar():
12 |     a = foo()
13 |     b, c = foo()
   |        ^ F841
   |
   = help: Remove assignment to unused variable `c`


